--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   get: ^4.6.5
   dio: ^4.0.6
   logger: ^1.1.0
+  carousel_slider: ^4.0.0
+  cached_network_image: ^3.0.0
 
 
 dev_dependencies:
