--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   logger: ^1.1.0
   carousel_slider: ^4.0.0
   cached_network_image: ^3.0.0
+  image_downloader: ^0.31.0
+  flutter_easyloading: ^3.0.5
 
 
 dev_dependencies:
