--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
   cached_network_image: ^3.0.0
   image_downloader: ^0.31.0
   flutter_easyloading: ^3.0.5
-
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  connectivity_plus: ^2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -32,9 +34,9 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-
-  # assets:
-  #   - images/a_dot_burr.jpeg
+#
+#  assets:
+#    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
